# llmlb

./: .gitattributes  .gitignore  .gitmodules  .gwt-session.toml  .markdownlint-cli2.jsonc  .markdownlintignore  .mcp.json  .release-please-config.json  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  PLANS.md  README.ja.md  README.md  TROUBLESHOOTING.md  USAGE.md  a.md  cliff.toml  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.md
llmlb/: Cargo.toml  build.rs
llmlb/migrations/: 002_invitations.sql  004_add_token_statistics.sql  005_add_endpoints.sql  006_add_responses_api_support.sql  007_add_endpoint_capabilities.sql  008_add_device_info.sql  009_add_api_key_prefix.sql  010_add_endpoint_type.sql  011_add_endpoint_type_metadata.sql  012_add_api_key_permissions.sql  013_remove_responses_api_support.sql  014_add_endpoint_request_stats.sql  015_remove_endpoint_type_metadata.sql  016_add_tps_columns.sql  018_add_client_ip_tracking.sql  018_invalidate_legacy_api_keys.sql  019_audit_log.sql  020_rename_node_to_endpoint_in_request_history.sql  022_add_api_kind_to_daily_stats.sql  023_add_api_key_name_uniqueness.sql  024_allow_legacy_duplicate_api_key_updates.sql  025_add_canonical_name.sql  026_add_invitation_keys.sql  026_rebuild_audit_log_fts.sql  027_add_updated_at_to_users.sql  027_rebuild_audit_log_fts.sql
llmlb/src/: bootstrap.rs  config.rs  inference_gate.rs  internal_token.rs  lib.rs  logging.rs  main.rs  server.rs  shutdown.rs  supported_models.json
llmlb/src/api/: anthropic.rs  api_keys.rs  audio.rs  audit_log.rs  auth.rs  benchmarks.rs  catalog.rs  cloud_models.rs  cloud_proxy.rs  dashboard.rs  dashboard_ws.rs  endpoints.rs  error.rs  health.rs  images.rs  invitations.rs  logs.rs  mod.rs  model_name.rs  models.rs  openai.rs  openai_util.rs  proxy.rs  responses.rs  system.rs  users.rs
llmlb/src/audit/: hash_chain.rs  middleware.rs  mod.rs  types.rs  writer.rs
llmlb/src/auth/: backup_code.rs  bootstrap.rs  invitation.rs  jwt.rs  middleware.rs  mod.rs  password.rs
llmlb/src/balancer/: lease.rs  mod.rs  types.rs
llmlb/src/cli/: assistant.rs  internal.rs  mod.rs  serve.rs  status.rs  stop.rs
llmlb/src/common/: auth.rs  config.rs  error.rs  ip.rs  log.rs  mod.rs  protocol.rs  types.rs
llmlb/src/db/: api_keys.rs  audit_log.rs  download_tasks.rs  endpoint_daily_stats.rs  endpoints.rs  invitations.rs  migrations.rs  mod.rs  models.rs  request_history.rs  settings.rs  traits.rs  users.rs
llmlb/src/delete/: mod.rs  ollama.rs
llmlb/src/detection/: llama_cpp.rs  lm_studio.rs  mod.rs  ollama.rs  vllm.rs  xllm.rs
llmlb/src/download/: lm_studio.rs  mod.rs  ollama.rs
llmlb/src/events/: mod.rs
llmlb/src/gui/: mod.rs  tray.rs
llmlb/src/health/: endpoint_checker.rs  mod.rs  startup.rs
llmlb/src/lock/: mod.rs
llmlb/src/metadata/: lm_studio.rs  mod.rs  ollama.rs  xllm.rs
llmlb/src/models/: image.rs  mapping.rs  mod.rs
llmlb/src/registry/: endpoints.rs  mod.rs  models.rs
llmlb/src/sync/: capabilities.rs  mod.rs  parser.rs
llmlb/src/system_info/: llamacpp.rs  mod.rs
llmlb/src/token/: mod.rs
llmlb/src/types/: endpoint.rs  health.rs  media.rs  mod.rs  model.rs
llmlb/src/update/: history.rs  mod.rs  schedule.rs
llmlb/src/xllm/: download.rs  mod.rs
llmlb/tests/: audio_error_handling_test.rs  cli_binary_smoke_test.rs  cli_tests.rs  contract_tests.rs  dashboard_smoke.rs  e2e_audio.rs  e2e_auth.rs  e2e_images.rs  e2e_ip_recording.rs  e2e_openai_proxy.rs  integration_balancer.rs  integration_tests.rs  ui_tests.rs  unit_tests.rs
llmlb/tests/contract/: anthropic_messages_api_test.rs  api_keys_api_test.rs  audio_additional_test.rs  audio_speech_test.rs  audio_transcriptions_test.rs  auth_api_test.rs  chat_modal_embed.rs  chat_page_spec.rs  clients_alert_test.rs  clients_api_test.rs  clients_apikeys_test.rs  clients_drilldown_test.rs  clients_heatmap_test.rs  clients_timeline_test.rs  endpoint_daily_stats_api_test.rs  endpoints_contract_extended_test.rs  endpoints_delete_test.rs  endpoints_download_progress_test.rs  endpoints_download_test.rs  endpoints_get_detail_test.rs  endpoints_get_list_test.rs  endpoints_model_info_test.rs  endpoints_post_test.rs  endpoints_put_test.rs  endpoints_sync_test.rs  endpoints_test_test.rs  endpoints_type_filter_test.rs  images_edits_test.rs  images_generations_test.rs  images_variations_test.rs  invitations_api_test.rs  models_api_test.rs  models_source_test.rs  openai_logging_test.rs  openai_request_sanitization_spec.rs  queueing_test.rs  request_history_api_test.rs  responses_api_test.rs  test_proxy_completions.rs  users_api_test.rs  (+5 more)
llmlb/tests/e2e/: api_key_flow_test.rs  audio_flow_test.rs  auth_disabled_flow_test.rs  auth_flow_test.rs  dashboard_flow_test.rs  images_flow_test.rs  invitation_flow_test.rs  ip_recording_test.rs  safetensors_flow_test.rs  vision_flow_test.rs
llmlb/tests/e2e-playwright/: .gwt-session.toml  WALKTHROUGH.md  package.json  playwright.config.ts  test-chat.mjs  tsconfig.json
llmlb/tests/integration/: api_key_scopes_test.rs  api_system_test.rs  dashboard_endpoints_type_test.rs  endpoint_auto_recovery_test.rs  endpoint_connection_test_test.rs  endpoint_download_reject_test.rs  endpoint_health_check_test.rs  endpoint_latency_routing_test.rs  endpoint_management_test.rs  endpoint_model_metadata_test.rs  endpoint_model_sync_test.rs  endpoint_name_uniqueness_test.rs  endpoint_registration_test.rs  endpoint_type_auto_detection_test.rs  endpoint_type_detection_test.rs  endpoint_type_filter_test.rs  endpoint_type_manual_override_test.rs  endpoint_viewer_access_test.rs  endpoint_xllm_download_test.rs  images_api_test.rs  invitation_keys_api_test.rs  migration_test.rs  model_info_test.rs  model_routing_balancing_test.rs  models_api_test.rs  (+16 more)
node/: CMakeLists.txt  Dockerfile
node/llm_tokenizer_ffi/: Cargo.toml
node/src/: main.cpp
poc/onnx-runtime-demo/: CMakeLists.txt  README.md  convert_and_run.sh  generate_gpu_only_models.py  main.cpp  run_gpu_only_poc.sh
(+2414 files in other folders)
