[workspace]
members = ["llmlb"]
resolver = "2"

[workspace.package]
version = "4.0.0"
edition = "2021"
authors = ["LLM Router Contributors"]
license = "Apache-2.0"
repository = "https://github.com/akiojin/llmlb"

[workspace.dependencies]
# 共通依存クレート
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# rustlsを使用してOpenSSL依存を回避（musl/クロスコンパイル対応）
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "blocking", "multipart", "rustls", "query"] }

# Router専用
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Node専用
sysinfo = "0.38"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
