[package]
name = "llmlb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
# 非同期ランタイム
tokio = { workspace = true }

# Webフレームワーク
axum = { workspace = true, features = ["multipart", "ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
include_dir = "0.7"
mime_guess = "2.0"

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"

# HTTPクライアント
reqwest = { workspace = true }
futures = "0.3"
prometheus = "0.14"
once_cell = "1.19"
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["io"] }

# ログ
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# その他
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
csv = "1.3"
base64 = "0.22"

# 認証機能
# default-features には "any/macros/migrate/json" が含まれており、未使用DBドライバまで
# lockfile に固定されてしまう（= cargo-audit で到達不能な脆弱性が検出される）ため明示制御する。
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
bcrypt = "0.18"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
sha2 = "0.10"
rand = "0.9"
rpassword = "7.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# ファイルロック（クロスプラットフォーム）
fs2 = "0.4"

# Progress parsing
regex = "1.10"

# Token counting
tiktoken-rs = "0.9.1"

[build-dependencies]
winresource = "0.1.27"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = "0.21.2"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# Unix専用依存関係（シグナル送信用）
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
once_cell = "1.21"
wiremock = "0.6.5"
criterion = { version = "0.8", features = ["async_tokio"] }
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
serial_test = "3.0"
tokio-tungstenite = "0.28"
